--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "foundation-sites-template",
+  "name": "bliss-framework",
   "version": "1.0.0",
   "description": "Basic template for a new Foundation for Sites project.",
   "main": "gulpfile.js",
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-sass": "^2.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-rename": "^1.2.2",
-    "uglify-js": "^2.7.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "browser-sync": "^2.14.0",
-    "merge-stream": "^1.0.0"
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.1",
+    "gulp-sass": "2.3.2",
+    "gulp-rename": "1.2.2",
+    "uglify-js": "2.7.3",
+    "gulp-uglify": "2.0.0",
+    "gulp-util": "3.0.7",
+    "browser-sync": "2.17.3",
+    "merge-stream": "1.0.0"
   },
   "scripts": {
     "start": "gulp",
@@ -21,16 +20,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zurb/foundation-sites-template.git"
+    "url": "https://github.com/restfulbrilliance/bliss-framework.git"
   },
   "bugs": {
-    "url": "https://github.com/zurb/foundation-sites/issues",
-    "email": "foundation@zurb.com"
+    "url": "https://github.com/restfulbrilliance/bliss-framework/issues",
+    "email": "bliss@restfulbrilliance.com"
   },
-  "author": "ZURB <foundation@zurb.com>",
+  "author": "Restful Brilliance <bliss@restfulbrilliance.com>",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "gulp-autoprefixer": "^3.1.0"
+    "gulp-autoprefixer": "3.1.1"
   }
 }
