--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-_site
 .sass-cache
 .jekyll-metadata
-node_modules
-bower_components
-.vs
+/node_modules/
+/bower_components/
+/.vs/
+/_site/
 Thumbs.db
 
