major update to gulpfile.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-util": "3.0.8",
     "browser-sync": "2.18.8",
     "merge-stream": "1.0.1",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "run-sequence": "1.2.2"
   },
   "main": "gulpfile.js",
   "scripts": {
