--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "email": "bliss@restfulbrilliance.com"
   },
   "dependencies": {
-    "gulp-autoprefixer": "3.1.1"
+    "gulp-autoprefixer": "^4.0.0"
   },
   "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "3.1.1",
-    "gulp-sass": "3.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-uglify": "2.1.1",
-    "gulp-util": "3.0.8",
-    "browser-sync": "2.18.8",
-    "merge-stream": "1.0.1",
-    "path": "0.12.7",
-    "run-sequence": "1.2.2"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "browser-sync": "^2.18.12",
+    "merge-stream": "^1.0.1",
+    "path": "^0.12.7",
+    "run-sequence": "^1.2.2"
   },
   "main": "gulpfile.js",
   "scripts": {
