--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
-gems: [jekyll-paginate]
+gems: ['jekyll-paginate', 'jekyll-sitemap']
 
 # Site settings
 title: "Restful Brilliance LLC"
